--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://liga-dos-programadores.io/"
+baseURL = "https://liga-dos-programadores.io/blog/"
 ltanguageCode = "pt-br"
 defaultContentLanguage = "pt-br"
 title = "liga"
