--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3.7.0-6
       with:
-        personal_token: ${{ secrets.TOKEN_DO_CAP_PARA_DEPLOY_SE_EU_MORRER_TROCAR_ESSE_TOKEN }}
+        personal_token: ${{ secrets.SECRET }}
         destination_dir: blog
         publish_dir: ./public
         publish_branch: master
