--- a/config.toml
+++ b/config.toml
@@ -56,4 +56,4 @@ paginate = 5
       [[languages.pt-br.menu.main]]
         identifier = "discord"
         name = "discord"
-        url = "https://discord.gg/3avc6QU"
+        url = "https://discord.gg/fmnxSYR"
